Fixed alignment and added more CSS styling.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -50,6 +50,7 @@ h1 a {
     text-decoration: none;
 }
 
+.linked-in a:visited,
 h1 a:visited {
     color: white;
 }
@@ -72,9 +73,11 @@ nav ul {
 }
 
 .linked-in {
-    border-width: 3px;
-    border-color: var(--dark3);
-    margin-left: 40px;
+    background-color: var(--dark3);
+    color: white;
+    margin 1%;
+    padding: 1%;
+    font-style: bold;
 }
 
 .top a {
@@ -113,7 +116,7 @@ section .card {
 }
 
 .section-title {
-    background-color: var(--dark1);
+    background-color: var(--dark3);
     color: white;
     font-style: bold;
     font-size: 250%;
@@ -132,6 +135,12 @@ section .bio-text {
     padding: 20px;
     border-color: var(--dark3);
     border: 30px;
+}
+
+section ul {
+    display: inline-block;
+    margin: .5%;
+    padding: .5%;
 }
 
 p {
@@ -170,7 +179,7 @@ div {
 
 .section-topic {
     font-style: bold;
-    font-size: 100%
+    font-size: 125%
 }
 
 .section-info {
